Added logback and new readme

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>4.0.1.RELEASE</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.carrotsearch</groupId>
